[gd_scene load_steps=24 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/shaders/Shockwave.shader" type="Shader" id=2]
[ext_resource path="res://assets/shaders/Bloom.shader" type="Shader" id=3]
[ext_resource path="res://assets/shaders/Clouds.shader" type="Shader" id=4]
[ext_resource path="res://src/Clouds.gd" type="Script" id=5]
[ext_resource path="res://src/Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/misc/Amatic-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://src/Shockwave.gd" type="Script" id=8]
[ext_resource path="res://src/PulsateCanvasItem.gd" type="Script" id=9]
[ext_resource path="res://assets/sprites/bonuses/helper.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/bonuses/luck.png" type="Texture" id=12]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/color = Color( 0.129412, 0.129412, 0.129412, 1 )
shader_param/offset = null
shader_param/alpha = 1.0
shader_param/seed = -100.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/color = Color( 0.113725, 0.113725, 0.113725, 1 )
shader_param/offset = null
shader_param/alpha = 1.0
shader_param/seed = 200.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/color = Color( 0.384314, 0.384314, 0.384314, 1 )
shader_param/offset = null
shader_param/alpha = 1.0
shader_param/seed = 100.0

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 2 )
shader_param/origin = Vector2( 0.5, 0.5 )
shader_param/amount = 0.0
shader_param/size = 0.0
shader_param/feather = 0.05
shader_param/thickness = 0.03

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 3 )
shader_param/hdr_threshold = 0.7
shader_param/amount = 7.0
shader_param/speed = 2.0

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float screen_width = 1024;
uniform float screen_height = 600;

// Curvature
uniform float BarrelPower =1.1;
// Color bleeding
uniform float color_bleeding = 1.2;
uniform float bleeding_range_x = 3;
uniform float bleeding_range_y = 3;
// Scanline
uniform float lines_distance = 4.0;
uniform float scan_size = 2.0;
uniform float scanline_alpha = 0.9;
uniform float lines_velocity = 30.0;

vec2 distort(vec2 p) 
{
	float angle = p.y / p.x;
	float theta = atan(p.y,p.x);
	float radius = pow(length(p), BarrelPower);
	
	p.x = radius * cos(theta);
	p.y = radius * sin(theta);
	
	return 0.5 * (p + vec2(1.0,1.0));
}

void get_color_bleeding(inout vec4 current_color,inout vec4 color_left){
	current_color = current_color*vec4(color_bleeding,0.5,1.0-color_bleeding,1);
	color_left = color_left*vec4(1.0-color_bleeding,0.5,color_bleeding,1);
}

void get_color_scanline(vec2 uv,inout vec4 c,float time){
	float line_row = floor((uv.y * screen_height/scan_size) + mod(time*lines_velocity, lines_distance));
	float n = 1.0 - ceil((mod(line_row,lines_distance)/lines_distance));
	c = c - n*c*(1.0 - scanline_alpha);
	c.a = 1.0;
}

void fragment()
{
	vec2 xy = SCREEN_UV * 2.0;
	xy.x -= 1.0;
	xy.y -= 1.0;
	
	float d = length(xy);
	if(d < 1.5){
		xy = distort(xy);
	}
	else{
		xy = SCREEN_UV;
	}
	
	float pixel_size_x = 1.0/screen_width*bleeding_range_x;
	float pixel_size_y = 1.0/screen_height*bleeding_range_y;
	vec4 color_left = texture(SCREEN_TEXTURE,xy - vec2(pixel_size_x, pixel_size_y));
	vec4 current_color = texture(SCREEN_TEXTURE,xy);
	get_color_bleeding(current_color,color_left);
	vec4 c = current_color+color_left;
	get_color_scanline(xy,c,TIME);
	COLOR = c;

}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/screen_width = 1024.0
shader_param/screen_height = 600.0
shader_param/BarrelPower = 1.05
shader_param/color_bleeding = 0.0
shader_param/bleeding_range_x = 0.0
shader_param/bleeding_range_y = 0.0
shader_param/lines_distance = 2.0
shader_param/scan_size = 2.0
shader_param/scanline_alpha = 1.0
shader_param/lines_velocity = 30.0

[sub_resource type="DynamicFont" id=8]
size = 80
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=10]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=11]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="CanvasItemMaterial" id=12]
blend_mode = 1

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="BgCanvas" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="BgCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds3" type="ColorRect" parent="BgCanvas"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.680298
margin_top = -0.777771
margin_right = -0.680298
margin_bottom = -0.777771
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds2" type="ColorRect" parent="BgCanvas"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.618774
margin_top = -2.07666
margin_right = 0.618774
margin_bottom = -2.07666
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds1" type="ColorRect" parent="BgCanvas"]
visible = false
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.777771
margin_bottom = -0.777771
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainCanvas" type="CanvasLayer" parent="."]

[node name="Shockwave" type="ColorRect" parent="MainCanvas"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.78857
margin_top = 2.78864
margin_right = 2.78857
margin_bottom = 2.78864
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bloom" type="BackBufferCopy" parent="MainCanvas"]
copy_mode = 2
rect = Rect2( 0, 0, 1024, 600 )

[node name="BloomEffect" type="ColorRect" parent="MainCanvas/Bloom"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LensDistort" type="BackBufferCopy" parent="MainCanvas"]
copy_mode = 2
rect = Rect2( 0, 0, 1024, 600 )

[node name="LensDistortEffect" type="ColorRect" parent="MainCanvas/LensDistort"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" parent="MainCanvas" instance=ExtResource( 6 )]
margin_top = 176.332
margin_bottom = 276.332
text = "Start"
scene_to_load = "NameInput"

[node name="Title" type="Label" parent="MainCanvas"]
margin_left = 210.944
margin_top = 0.0306835
margin_right = 810.944
margin_bottom = 87.0309
rect_pivot_offset = Vector2( 300, 30 )
custom_fonts/font = SubResource( 8 )
text = "Perfect Balance"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="ColorRect" parent="MainCanvas"]
margin_left = 361.092
margin_top = 93.7815
margin_right = 661.092
margin_bottom = 97.7815
rect_pivot_offset = Vector2( 150, 2 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
speed = 0.5
freeze_y = true

[node name="Author" type="Label" parent="MainCanvas"]
margin_left = 209.077
margin_top = 99.5001
margin_right = 809.077
margin_bottom = 157.5
rect_pivot_offset = Vector2( 300, 30 )
custom_fonts/font = SubResource( 9 )
text = "by Antti Haavikko"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="MainCanvas"]
margin_left = 211.0
margin_top = 148.973
margin_right = 811.0
margin_bottom = 175.973
rect_pivot_offset = Vector2( 300, 30 )
custom_fonts/font = SubResource( 10 )
text = "Made for Godot Wild Jam #25  -  Keep an eye out for the wildcard \"Forbidden Fruit\""
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names" type="Label" parent="MainCanvas"]
margin_left = 352.542
margin_top = 189.145
margin_right = 752.542
margin_bottom = 456.145
rect_pivot_offset = Vector2( 300, 30 )
custom_fonts/font = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="Label" parent="MainCanvas"]
margin_left = 316.302
margin_top = 189.356
margin_right = 716.302
margin_bottom = 456.356
rect_pivot_offset = Vector2( 300, 30 )
custom_fonts/font = SubResource( 11 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flags" type="ColorRect" parent="MainCanvas"]
margin_left = 299.302
margin_top = 185.259
margin_right = 339.302
margin_bottom = 458.259
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flag1" type="TextureRect" parent="MainCanvas/Flags"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 35.0

[node name="Flag2" type="TextureRect" parent="MainCanvas/Flags"]
margin_top = 33.6256
margin_right = 32.0
margin_bottom = 65.6256

[node name="Flag3" type="TextureRect" parent="MainCanvas/Flags"]
margin_top = 64.3072
margin_right = 32.0
margin_bottom = 96.3072

[node name="Flag4" type="TextureRect" parent="MainCanvas/Flags"]
margin_top = 93.6149
margin_right = 32.0
margin_bottom = 125.615

[node name="Flag5" type="TextureRect" parent="MainCanvas/Flags"]
margin_top = 122.524
margin_right = 32.0
margin_bottom = 154.524

[node name="Flag6" type="TextureRect" parent="MainCanvas/Flags"]
margin_top = 153.778
margin_right = 32.0
margin_bottom = 185.778

[node name="Flag7" type="TextureRect" parent="MainCanvas/Flags"]
margin_top = 183.23
margin_right = 32.0
margin_bottom = 215.23

[node name="Flag8" type="TextureRect" parent="MainCanvas/Flags"]
margin_top = 212.826
margin_right = 32.0
margin_bottom = 244.826

[node name="Flag9" type="TextureRect" parent="MainCanvas/Flags"]
margin_left = 0.343353
margin_top = 242.02
margin_right = 32.3434
margin_bottom = 274.02

[node name="TextureRect" type="TextureRect" parent="MainCanvas"]
visible = false
material = SubResource( 12 )
margin_left = 732.546
margin_top = 291.404
margin_right = 2400.55
margin_bottom = 2515.4
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="MainCanvas"]
visible = false
material = SubResource( 12 )
margin_left = 286.345
margin_top = 295.719
margin_right = 1954.35
margin_bottom = 2519.72
rect_scale = Vector2( -0.2, 0.2 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextPage" parent="MainCanvas" instance=ExtResource( 6 )]
margin_left = 253.244
margin_top = -30.8414
margin_right = 350.0
margin_bottom = 69.1586
rect_scale = Vector2( 0.5, 0.422 )
rect_pivot_offset = Vector2( 50, 50 )
text = ">"

[node name="PrevPage" parent="MainCanvas" instance=ExtResource( 6 )]
margin_left = -350.0
margin_top = -30.8414
margin_right = -260.948
margin_bottom = 69.1586
rect_scale = Vector2( 0.5, 0.422 )
rect_pivot_offset = Vector2( 50, 50 )
text = "<"

[node name="Close" parent="MainCanvas" instance=ExtResource( 6 )]
margin_left = -517.218
margin_top = -308.065
margin_right = -428.166
margin_bottom = -208.065
rect_scale = Vector2( 0.5, 0.422 )
rect_pivot_offset = Vector2( 50, 50 )
text = "X"

[node name="Camera" type="Camera2D" parent="."]
[connection signal="clicked" from="MainCanvas/NextPage" to="." method="_on_NextPage_clicked"]
[connection signal="clicked" from="MainCanvas/PrevPage" to="." method="_on_PrevPage_clicked"]
[connection signal="clicked" from="MainCanvas/Close" to="." method="_on_Close_clicked"]
